# NBD-24

./: .gitignore  Untitled-1.ipynb  annotation.py  annotation_gui.py  annotation_schema.py  datajoint.ipynb  load_images.py  model_training.ipynb  monitor_annotation.py  pyproject.toml  readimages.ipynb  requirements.txt
.devcontainer/: Dockerfile  docker-compose.yaml
nbd/: annotation_gui.py  annotation_schema.py  app.py  monitor_annotation.py  processing.py
nbd/templates/: index.html
notebooks/: datajoint.ipynb  ml_example.ipynb  readimages.ipynb
