[project]
name = "nbd"
version = "0.1.0"
description = "demo for national biomechanics day"
requires-python = ">=3.12"
authors = [{name = "JD Peiffer", email = "jd.peiffer@gmail.com"}]
dependencies = [
    "matplotlib",
    "datajoint",
    "streamlit",
    "streamlit_image_coordinates",
    "opencv-python",
    "ipykernel>=6.29.5",
    "flask",
    "jax[cuda12]",
    "jaxlib",
    "torch",
    "torchvision",
    "equinox",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
